--- a/twister-starter/package.json
+++ b/twister-starter/package.json
@@ -5,8 +5,10 @@
   "main": "src/index.js",
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
+    "classnames": "^2.2.5",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
